# etl

./: .env.example  .gitignore  README.md  docker-compose.yml  Текстовый документ.txt
airflow/: Dockerfile
airflow/dags/: oltp_olap_benchmark.py
docs/: java-sequence.puml  python-sequence.puml
java-cli/: Dockerfile  pom.xml
java-cli/src/main/java/bench/: App.java  BenchmarkPipeline.java  CliArgs.java  ClickHouseClient.java  DatabaseSettings.java  Metrics.java  PostgresClient.java  ProcessMetrics.java  SqlNames.java
python-cli/: Dockerfile  pyproject.toml  requirements.txt
python-cli/etlbench/: __main__.py  config.py  identifiers.py  io_streams.py  metrics.py  source_loader.py  transfer.py
scripts/: clean.ps1  clear-results.ps1  paths.ps1  prepare-source.ps1  query-results.ps1  run-airflow.ps1  run-all.ps1  run-java.ps1  run-python.ps1  start-services.ps1
sql/clickhouse/: 001_init.sql  benchmark_report.sql
sql/postgres/: 001_init.sql
